// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/ProductBranding should show correct icon glyph when we are on Boards 1`] = `
<ProductBrandingContainer
  tabIndex={-1}
>
  <ProductBoardsIcon
    size={24}
  />
  <h1
    className="sr-only"
  >
    Boards
  </h1>
  <ProductBrandingHeading>
    Boards
  </ProductBrandingHeading>
</ProductBrandingContainer>
`;

exports[`components/ProductBranding should show correct icon glyph when we are on Channels 1`] = `
<ProductBrandingContainer
  tabIndex={-1}
>
  <ProductChannelsIcon
    size={24}
  />
  <h1
    className="sr-only"
  >
    Channels
  </h1>
  <ProductBrandingHeading>
    Channels
  </ProductBrandingHeading>
</ProductBrandingContainer>
`;

exports[`components/ProductBranding should show correct icon glyph when we are on Playbooks 1`] = `
<ProductBrandingContainer
  tabIndex={-1}
>
  <ProductPlaybooksIcon
    size={24}
  />
  <h1
    className="sr-only"
  >
    Playbooks
  </h1>
  <ProductBrandingHeading>
    Playbooks
  </ProductBrandingHeading>
</ProductBrandingContainer>
`;
